Do not use stubbed SsoOpenid module, use the real thing

--- a/spec/fixtures/vcr_cassettes/user_with_access_records_but_no_gp_records.yml
+++ b/spec/fixtures/vcr_cassettes/user_with_access_records_but_no_gp_records.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://account-qa.networkforgood.com/api/v1/admins?email=tom@givecorps.com
+    uri: https://account-qa.networkforgood.com/api/v1/admins?email=tom@givecorps.com
     body:
       encoding: US-ASCII
       string: ''
