--- a/spec/fixtures/vcr_cassettes/user_with_gp_access_records_all_orgs_are_inactive.yml
+++ b/spec/fixtures/vcr_cassettes/user_with_gp_access_records_all_orgs_are_inactive.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://account-qa.networkforgood.com/api/v1/admins?email=nfgcvlx%2B27-1095214d@gmail.com
+    uri: https://account-qa.networkforgood.com/api/v1/admins?email=nfgcvlx%2B27-1095214d@gmail.com
     body:
       encoding: US-ASCII
       string: ''
