--- a/spec/fixtures/vcr_cassettes/user_with_no_access_records.yml
+++ b/spec/fixtures/vcr_cassettes/user_with_no_access_records.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://account-qa.networkforgood.com/api/v1/admins?email=this@that.com
+    uri: https://account-qa.networkforgood.com/api/v1/admins?email=this@that.com
     body:
       encoding: US-ASCII
       string: ''
@@ -51,6 +51,6 @@ http_interactions:
     body:
       encoding: ASCII-8BIT
       string: '{"errors":"Admin could not be found"}'
-    http_version: 
+    http_version:
   recorded_at: Wed, 08 Mar 2017 19:50:49 GMT
 recorded_with: VCR 3.0.3
