--- a/spec/fixtures/vcr_cassettes/user_with_no_access_records.yml
+++ b/spec/fixtures/vcr_cassettes/user_with_no_access_records.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://account.networkforgood-beta.com/api/v1/admins?email=this@that.com
+    uri: http://account.lvh.me:3002/api/v1/admins?email=this@that.com
     body:
       encoding: US-ASCII
       string: ''
