To look up a user by username we should be using search, not find. Also, the extra "/" at the end of the url is no longer be added (perhaps a rails 4 to 5 change?).

--- a/spec/fixtures/vcr_cassettes/user/create_with_no_user_found.yml
+++ b/spec/fixtures/vcr_cassettes/user/create_with_no_user_found.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://users-uat.networkforgood.org/api/user/?username=john@smith.com
+    uri: https://users-uat.networkforgood.org/api/user?username=john@smith.com
     body:
       encoding: US-ASCII
       string: ''
